뒤로가기 기능 추가

--- a/Main.html
+++ b/Main.html
@@ -11,19 +11,20 @@
     <body style="overflow:hidden"><!--스크롤바 없애기-->
         <div class="container">
             <div class="leftTop">
-                <img  src="Images/Title.png">
+                <img  src="Images/UI/Title.png">
             </div>
     
             <canvas id="canvas">
             </canvas>
     
             <div class="rightBottom">
-                <img  src="Images/Description.png">
+                <img  src="Images/UI/Description.png">
             </div>
         </div>
 
         <!--타이틀 씬 버튼-->
         <button id="GameStartButton"></button>
+        <button id="BackButton"></button>
         <!--캐릭터 선택 씬 버튼
 
             라디오 버튼 식으로 하기 위해 Label로 구성
